# Logos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  COMPARISON.md  CONTRIBUTING.md  CRITIQUE.md  Dockerfile  Dockerfile.openshell-sandbox  ILEARNT.md  OUTSTANDING_FEATURES.md  PROJECT_STATE.md  README.md  SECURITY.md  SOUL.md  batch_runner.py  cli.py  docker-compose.k3s.yml  docker-compose.yml  hermes_constants.py  hermes_state.py  hermes_time.py  metrics.py  mini_swe_runner.py  model_tools.py  onboarding_plan.md  pyproject.toml  requirements.txt  run_agent.py  runs.py  toolset_distributions.py  toolsets.py  trajectory_compressor.py
.github/: PULL_REQUEST_TEMPLATE.md
.plans/: openai-api-server.md
acp_adapter/: auth.py  entry.py  server.py  session.py
agent/: auxiliary_client.py  display.py  model_metadata.py  prompt_builder.py  redact.py
core/: batch_runner.py  model_tools.py  state.py  toolset_distributions.py  toolsets.py  trajectory_compressor.py
cron/: jobs.py  scheduler.py
docker/: Dockerfile.docker-sandbox
docs/: acp-setup.md  agent-runtime-protocol.md  lazy_tool_loading.md  mcp_redesign.md  unified_services.md
environments/: agent_loop.py  hermes_base_env.py  tool_context.py
evals/: __init__.py  assertions.py  runner.py  schema.py
gateway/: admin_handlers.py  channel_directory.py  chat_handlers.py  config.py  delivery.py  dry_run.py  evolution_handlers.py  hooks.py  http_api.py  mcp_access.py  mcp_catalogue.py  mcp_deploy.py  mcp_handlers.py  mcp_management.py  mcp_service.py  mirror.py  model_catalog.yaml  pairing.py  run.py  runs.py  seed.py  services.py  session.py  setup_handlers.py  souls.py  status.py  sticker_cache.py  worker.py  worker_registry.py  workspace.py
hermes_cli/: __init__.py  auth.py  banner.py  callbacks.py  cli.py  config.py  default_soul.py  doctor.py  gateway.py  main.py  runtime_provider.py  setup.py  skin_engine.py  status.py  tools_config.py  uninstall.py
installer/: logos.iss
k8s/: 00-namespace.yaml  01-configmap-env.yaml  02-secret.yaml  03-configmap-hermes-config.yaml  04-ai-router-service.yaml  05-ai-router-main-py.yaml  05-pvc.yaml  05b-pvc-shared-memory.yaml  06-deployment.yaml  07-service.yaml  08-configmap-providers.yaml  08-serviceaccount.yaml  09-ai-router-deployment.yaml  09-rbac.yaml  10-hermes-canary-deployment.yaml  10-logos-canary-deployment.yaml  11-hermes-canary-service.yaml  12-hermes-canary-admin-secret.yaml  12-logos-canary-admin-secret.yaml  13-logos-setup-test-deployment.yaml  14-logos-setup-test-service.yaml  15-logos-generic-config.yaml  16-network-policy.yaml  README.md
landingpage/: index.html
launcher/: hermes_launcher.py  hermes_launcher.spec  make_icon.py
logos/: __init__.py  context.py
logos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
logos_cli/: __init__.py  auth.py  banner.py  callbacks.py  checklist.py  claw.py  cli.py  commands.py  config.py  cron.py  curses_ui.py  doctor.py  gateway.py  main.py  models.py  runtime_provider.py  setup.py  skills_config.py  skills_hub.py  skin_engine.py  status.py  tools_config.py  uninstall.py
mini-swe-agent/: pyproject.toml
optional-skills/: DESCRIPTION.md
scripts/: dev-setup.sh  rl_cli.py  sample_and_compress.py  smoke-test.sh  tag.sh  test.sh  test_model_server.py
tests/: run_interrupt_test.py  test_413_compression.py  test_860_dedup.py  test_anthropic_provider_persistence.py  (+44 more)
(+289 files in other folders)
